Fixed issue with header text not showing

--- a/src/components/BookSmarts/BookSmarts.module.scss
+++ b/src/components/BookSmarts/BookSmarts.module.scss
@@ -1,11 +1,7 @@
 @import "../../assets//styles/layout/header";
 
 .smHeader{
-    box-shadow:0px 2px 2.62px rgba(0, 0, 0, 0.23);
     border-bottom: 10px solid #A0EBE7;
-    h1{
-        color:#394167
-    }
 }
 
 .pageContainer {
