--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -10,7 +10,6 @@
   top: 0;
   background-color: transparent;
   height: 10vh;
-  z-index: 100;
   background-color: $deepPurple;
 
   .globalNav {
