--- a/src/components/UpYourGame/UpYourGame.module.scss
+++ b/src/components/UpYourGame/UpYourGame.module.scss
@@ -5,7 +5,6 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&family=Nunito:wght@400;700&display=swap');
 
 .smHeader{
-    background-color: white;
     border-bottom: 10px solid $waddleRed;
 }
 
